--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,10 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
-    // assertj 추가
-    testImplementation 'org.assertj:assertj-core:3.23.1'
+    // embedded tomcat
+    implementation 'org.apache.tomcat.embed:tomcat-embed-core:8.5.42'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:8.5.42'
+
 }
 
 test {
